fix spacing

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -23,10 +23,10 @@ main {
 header {
 	margin: 0;
 }
-
 footer {
-	margin: 1.5rem 0 0 0;
+	margin: 0;
 }
+
 h1 {
 	font-size: 3rem;
 	font-weight: 800;
@@ -42,20 +42,22 @@ h1 {
 	);
 	height: 3px;
 }
+
 .header_bar {
 	box-shadow: 0px -5px 5px -5px #bababa;
 	padding: 0 4px;
 }
-
 .header_bar h2 {
 	margin: 0 0 0 3rem;
-	padding: 0.5rem 0;
+	padding: 0.25rem 0;
 }
+
 .footer_bar {
 	box-shadow: 5px -5px 0px -5px #bababa;
 	padding: 0.5rem 0;
 	text-align: center;
 }
+
 .text_gradient {
 	background-image: linear-gradient(
 		45deg,
@@ -74,14 +76,13 @@ h1 {
 	line-height: 1.6;
 	border: 1px solid rgba(var(--accent), 25%);
 	background-color: white;
-	padding: 0 1rem;
+	padding: 1rem;
 	border-radius: 0.4rem;
 	margin-bottom: 0.5rem;
 }
 .instructions p {
 	margin: 0;
 }
-
 .instructions code {
 	font-size: 0.875em;
 	font-weight: bold;
@@ -93,6 +94,7 @@ h1 {
 .instructions strong {
 	color: rgb(var(--accent));
 }
+
 .bmi_grid {
 	display: grid;
 	/* grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr)); */
